--- a/web/index.html
+++ b/web/index.html
@@ -3,8 +3,9 @@
 <head>
   <base href="chrome-extension-localization/web/">
   <link rel="icon" type="image/png" href="favicon.png">
-  <link rel="stylesheet" type="text/css" href="tippy.css">
-  <link rel="stylesheet" type="text/css" href="fontello.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600">
+  <link rel="stylesheet" href="tippy.css">
+  <link rel="stylesheet" href="fontello.css">
   <link rel="stylesheet" href="style.css">
   <script type="text/javascript" src="qwest.js"></script>
   <script type="text/javascript" src="history.js"></script>
@@ -34,7 +35,7 @@
     </div>
     <div v-if="state && !locale">
       <div class="toolbar">
-        <span class="title">ホ Localization: Locale Summary</span>
+        <span class="title">ホ Localization — {{ state.user }}/{{ state.project }}</span>
         <label title="Show locales that do not have a messages.json file">
           <input type="checkbox" v-model="showMissingLocales"></input>
           Show locales without translations
@@ -49,11 +50,11 @@
           <th data-tip title="Messages that are identical to their English counterparts; they might need translating">Identical</th>
         </tr>
         <tr @click="navigateLocale(id)" class="locale" v-for="(lo, id) in state.locales" v-if="id != 'en' && (showMissingLocales || lo.exists)">
-          <td class="exists" :class="{ yes: lo.exists }">{{ lo.exists ? 'Yes' : 'No' }}</td>
+          <td class="exists" :class="{ yes: lo.exists }"><i :class="{ 'icon-ok': lo.exists, 'icon-cancel': !lo.exists }"></i> {{ lo.exists ? 'Yes' : 'No' }}</td>
           <td>{{ id }}: {{ lo.name }}</td>
-          <td class="counter" :class="{ missing: lo.missing.length > 0 }">{{ lo.missing.length }}</td>
-          <td class="counter" :class="{ outdated: lo.outdated.length > 0 }">{{ lo.outdated.length }}</td>
-          <td class="counter" :class="{ identical: lo.identical.length > 0 }">{{ lo.identical.length }}</td>
+          <td class="counter" :class="{ missing: lo.missing.length > 0 }">{{ lo.missing.length || '–' }}</td>
+          <td class="counter" :class="{ outdated: lo.outdated.length > 0 }">{{ lo.outdated.length || '–' }}</td>
+          <td class="counter" :class="{ identical: lo.identical.length > 0 }">{{ lo.identical.length || '–' }}</td>
         </tr>
       </table>
     </div>
