--- a/web/index.html
+++ b/web/index.html
@@ -35,7 +35,7 @@
     </div>
     <div v-if="state && !locale">
       <div class="toolbar">
-        <span class="title">ホ Localization — {{ state.user }}/{{ state.project }}</span>
+        <a class="title" :href="'https://github.com/' + state.user + '/' + state.project" target="_blank">{{ state.user }}/{{ state.project }}</a>
       </div>
       <div class="index">
         <div class="criteria">
@@ -66,7 +66,7 @@
       <div class="toolbar">
         <div>
           <button @click="navigateIndex()" class="index-button"><i class="icon-arrow-left"></i> Locales</button>
-          <span class="title" :title="locale.name">Locale: {{ localeId }}</span>
+          <span :title="locale.name">Locale: {{ localeId }}</span>
           <button class="toggle-button" @click="toggleMessages()"><i :class="{ 'icon-show': toggleShow, 'icon-hide': !toggleShow }"></i> {{ toggleShow ? 'Show' : 'Hide' }} All</button>
           <span class="stats">
             <span class="stat">
