--- a/web/index.html
+++ b/web/index.html
@@ -4,14 +4,14 @@
   <base href="chrome-extension-localization/web/">
   <link rel="icon" type="image/png" href="favicon.png">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600">
-  <link rel="stylesheet" href="tippy.css">
-  <link rel="stylesheet" href="fontello.css">
+  <link rel="stylesheet" href="lib/tippy.css">
+  <link rel="stylesheet" href="lib/fontello.css">
   <link rel="stylesheet" href="style.css">
-  <script type="text/javascript" src="qwest.js"></script>
-  <script type="text/javascript" src="history.js"></script>
-  <script type="text/javascript" src="store.js"></script>
-  <script type="text/javascript" src="vue.js"></script>
-  <script type="text/javascript"src="tippy.js"></script>
+  <script type="text/javascript" src="lib/qwest.js"></script>
+  <script type="text/javascript" src="lib/history.js"></script>
+  <script type="text/javascript" src="lib/store.js"></script>
+  <script type="text/javascript" src="lib/vue.js"></script>
+  <script type="text/javascript"src="lib/tippy.js"></script>
   <title>Localization</title>
 </head>
 <body>
