Fix header color on non-Chrome. Fix textarea scrolling.

--- a/web/index.html
+++ b/web/index.html
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div class="popup success" v-if="showUpdated">
-      Translations updated from the server.
+      <i class="icon-ok"></i> Translations updated from the server.
     </div>
     <div class="popup success" v-if="editUrl">
       {{ locale.name }} translations exported to messages.json.
