Add book icon next to Translation Guide link.

--- a/web/index.html
+++ b/web/index.html
@@ -44,7 +44,9 @@
             Show locales without translations
           </label>
           <div>
-            <a href="https://github.com/schmich/chrome-extension-localization#translation-guide">Translation Guide</a>
+            <a href="https://github.com/schmich/chrome-extension-localization#translation-guide" target="_blank">
+              <i class="icon-book"></i>Translation Guide
+            </a>
           </div>
         </div>
         <table class="locales">
